add task 18-Jun

--- a/task_15_6/task_1.html
+++ b/task_15_6/task_1.html
@@ -6,7 +6,7 @@
     <title>task1</title>
 </head>
 <body>
-    <h1>preciding Text </h1>
+    <h1>prociding Text </h1>
     <ol type="I">
         <li>list item 1</li>
          <ol type="a">
