add task 18-Jun

--- a/task_18_6/task2.html
+++ b/task_18_6/task2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Employee Intrest Survay Form</h1>
-    <form>
+    <form action="task2.html" method="get">
         <label for="name">Enter your name:</label>
         <input type="text" id="name"><br><br>
         <label for="department">Eniter Your Departemnet</label>
