--- a/task_18_6/task3.html
+++ b/task_18_6/task3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Basic Html Form</h1>
-    <form action="task3.html">
+    <form action="task3.html" method="get">
         <fieldset >
             <legend>Name</legend>
             <label for="fname">First Name</label>
