--- a/task_18_6/task1.html
+++ b/task_18_6/task1.html
@@ -8,16 +8,18 @@
 <body>
     <h1>Regestration Form!</h1>
     <div>
-        <b>Personal details</b>
-        <hr>
+        
         <form action="task1.html" method="post">
+
             <fieldset style="width:200px;height: 300px;">
-            <label for="fname">First Name</label>
+            <b>Personal details</b>
+             <hr>
+            <label for="fname">First Name:</label>
             <input type="text" id="fname">
             <br><br>
-            <label for="lname">Last Name</label>
+            <label for="lname">Last Name:</label>
             <input type="text" id="lname"><br><br>
-            <label for="email">Email</label>
+            <label for="email">Email:</label>
             <input type="email" id="email"><br><br>
             <label for="gender">Gender:</label>
             <input type="radio" value="fmale" id="gender" name="gender">Fmale</option>
