--- a/task_22_6/task2.html
+++ b/task_22_6/task2.html
@@ -24,9 +24,9 @@
         .orang{
             background-color: orange;
             grid-column:1/3;
-            display: grid;
-            grid-template-columns:auto;
-            grid-gap: 2px;
+            /* display: grid; */
+            /* grid-template-columns:auto; */
+            /* grid-gap: 2px; */
             /* height: 400px; */
         }
         .gray{
